--- a/react-module/package.json
+++ b/react-module/package.json
@@ -18,8 +18,10 @@
     "@babel/core": "7.26.9",
     "@babel/preset-react": "7.26.3",
     "@babel/preset-typescript": "7.26.0",
+    "@module-federation/typescript": "3.1.3",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
+    "axios": "1.7.9",
     "babel-loader": "9.2.1",
     "html-webpack-plugin": "5.6.3",
     "typescript": "5.7.3",
