--- a/react-module/tsconfig.json
+++ b/react-module/tsconfig.json
@@ -9,6 +9,7 @@
     "jsx": "react",
     "allowJs": true,
     "moduleResolution": "node",
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "resolveJsonModule": true
   }
 }
