--- a/root-application/module-federation-config.json
+++ b/root-application/module-federation-config.json
@@ -2,7 +2,7 @@
   "name": "RootApplication",
   "filename": "RootApplicationMoudle.js",
   "remotes": {
-    "ReactChild": "http://localhost:3001/ReactChildModule.js"
+    "ReactChild": "ReactChild@http://localhost:3001/ReactChildModule.js"
   },
   "shared": {
     "react": { "singleton": true },
