--- a/root-application/tsconfig.json
+++ b/root-application/tsconfig.json
@@ -10,6 +10,9 @@
     "allowJs": true,
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "paths": {
+      "*": ["./@mf-types/*"]
+    }
   }
 }
