Add vue application

--- a/root-application/module-federation-config.json
+++ b/root-application/module-federation-config.json
@@ -3,7 +3,8 @@
   "filename": "RootApplicationMoudle.js",
   "remotes": {
     "ReactChild": "ReactChild@http://localhost:3001/ReactChildModule.js",
-    "AngularChild": "AngularChild@http://localhost:4200/AngularChildModule.js"
+    "AngularChild": "AngularChild@http://localhost:4200/AngularChildModule.js",
+    "VueChild": "VueChild@http://localhost:3003/VueChildModule.js"
   },
   "shared": {
     "react": { "singleton": true },
