--- a/vue-module/package.json
+++ b/vue-module/package.json
@@ -13,8 +13,9 @@
     "vue-class-component": "^8.0.0-0"
   },
   "devDependencies": {
-    "@vue/cli": "5.0.8",
     "@babel/core": "7.26.9",
+    "@module-federation/enhanced": "0.9.1",
+    "@vue/cli": "5.0.8",
     "@vue/cli-plugin-babel": "5.0.8",
     "@vue/cli-plugin-typescript": "5.0.8",
     "@vue/cli-service": "5.0.8",
