--- a/svelte-module/package.json
+++ b/svelte-module/package.json
@@ -2,23 +2,24 @@
   "name": "svelte-module",
   "version": "1.0.0",
   "dependencies": {
-    "svelte": "^4.0.0"
+    "svelte": "4.2.19"
   },
   "devDependencies": {
-    "cross-env": "^7.0.3",
-    "css-loader": "^6.7.1",
-    "mini-css-extract-plugin": "^2.6.0",
-    "svelte-loader": "^3.1.9",
-    "webpack": "^5.70.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1",
-    "ts-loader": "^9.0.0",
-    "@tsconfig/svelte": "^4.0.0",
-    "@types/node": "^16.0.0",
-    "svelte-check": "^3.4.4",
-    "svelte-preprocess": "^5.0.4",
-    "tslib": "^2.5.0",
-    "typescript": "^5.0.0"
+    "@tsconfig/svelte": "5.0.4",
+    "@types/node": "22.13.9",
+    "copy-webpack-plugin": "13.0.0",
+    "cross-env": "7.0.3",
+    "css-loader": "7.1.2",
+    "mini-css-extract-plugin": "2.9.2",
+    "svelte-check": "4.1.4",
+    "svelte-loader": "3.2.4",
+    "svelte-preprocess": "6.0.3",
+    "ts-loader": "9.5.2",
+    "tslib": "2.8.1",
+    "typescript": "5.8.2",
+    "webpack": "5.98.0",
+    "webpack-cli": "6.0.1",
+    "webpack-dev-server": "5.2.0"
   },
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack",
