Main script, package.json information

--- a/angular-module/package.json
+++ b/angular-module/package.json
@@ -1,6 +1,8 @@
 {
   "name": "angular-module",
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "license": "ISC",
+  "author": "Robert Wesołowski <kauczuk79@gmail.com>",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
