--- a/vue-module/package.json
+++ b/vue-module/package.json
@@ -7,6 +7,8 @@
     "start": "vue-cli-service serve --port 3003"
   },
   "main": "index.js",
+  "license": "ISC",
+  "author": "Robert Wesołowski <kauczuk79@gmail.com>",
   "dependencies": {
     "core-js": "3.40.0",
     "vue": "3.5.13",
