--- a/root-application/package.json
+++ b/root-application/package.json
@@ -11,8 +11,11 @@
   "license": "ISC",
   "author": "Robert Wesołowski <kauczuk79@gmail.com>",
   "dependencies": {
+    "@reduxjs/toolkit": "2.7.0",
     "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "react-dom": "19.0.0",
+    "react-redux": "9.2.0",
+    "redux": "5.0.1"
   },
   "devDependencies": {
     "@babel/core": "7.26.9",
