--- a/react-module/module-federation-config.json
+++ b/react-module/module-federation-config.json
@@ -1,11 +1,17 @@
 {
   "name": "ReactChild",
   "filename": "ReactChildModule.js",
+  "remotes": {
+    "RootApplication": "RootApplication@http://localhost:3000/RootApplicationMoudle.js"
+  },
   "exposes": {
     "./App": "./src/App"
   },
   "shared": {
     "react": { "singleton": true },
-    "react-dom": { "singleton": true }
+    "react-dom": { "singleton": true },
+    "@reduxjs/toolkit": { "singleton": true },
+    "react-redux": { "singleton": true },
+    "redux": { "singleton": true }
   }
 }
