--- a/react-module/package.json
+++ b/react-module/package.json
@@ -11,24 +11,27 @@
   "license": "ISC",
   "author": "Robert Wesołowski <kauczuk79@gmail.com>",
   "dependencies": {
-    "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "@reduxjs/toolkit": "2.7.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-redux": "9.2.0",
+    "redux": "5.0.1"
   },
   "devDependencies": {
-    "@babel/core": "7.26.9",
+    "@babel/core": "7.26.10",
     "@babel/preset-react": "7.26.3",
-    "@babel/preset-typescript": "7.26.0",
-    "@module-federation/enhanced": "0.9.1",
-    "@types/react": "19.0.10",
-    "@types/react-dom": "19.0.4",
-    "axios": "1.7.9",
-    "babel-loader": "9.2.1",
+    "@babel/preset-typescript": "7.27.0",
+    "@module-federation/enhanced": "0.12.0",
+    "@types/react": "19.1.2",
+    "@types/react-dom": "19.1.2",
+    "axios": "1.8.4",
+    "babel-loader": "10.0.0",
     "css-loader": "7.1.2",
     "html-webpack-plugin": "5.6.3",
     "style-loader": "4.0.0",
-    "typescript": "5.7.3",
-    "webpack": "5.98.0",
+    "typescript": "5.8.3",
+    "webpack": "5.99.6",
     "webpack-cli": "6.0.1",
-    "webpack-dev-server": "5.2.0"
+    "webpack-dev-server": "5.2.1"
   }
 }
