--- a/react-module/tsconfig.json
+++ b/react-module/tsconfig.json
@@ -6,6 +6,7 @@
     "noImplicitAny": true,
     "module": "ES2020",
     "target": "es5",
+    "noCheck": true,
     "jsx": "react",
     "allowJs": true,
     "moduleResolution": "node",
