--- a/root-application/tsconfig.json
+++ b/root-application/tsconfig.json
@@ -7,6 +7,7 @@
     "module": "ES2020",
     "target": "es5",
     "jsx": "react",
+    "noCheck": true,
     "allowJs": true,
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
